Fixed chart flicker

--- a/src/Main.module.css
+++ b/src/Main.module.css
@@ -202,3 +202,5 @@ tr:hover {background-color:#dddddd;}
 .footer > p {
   line-height: 30px;
 }
+
+svg > g > g:last-child { pointer-events: none }
